# TB3-Assignment

./: README.md
artifacts/: architecture.md  semantic_architecture.md  semantic_mock.json  semantic_queries_demo.txt  test_case_semantic_nav.md
maps_demo/: office.pgm  office.yaml
scripts/: demo_rrt_local.py  demo_semantic_query.py  map_bounds.py
src/tb3_exploration/: package.xml  setup.py
src/tb3_exploration/config/: slam_toolbox_params.yaml
src/tb3_exploration/launch/: slam_explore.launch.py  view_map.launch.py
src/tb3_exploration/resource/: tb3_exploration
src/tb3_exploration/rviz/: tb3_mapping.rviz
src/tb3_rrt_planner/: package.xml  setup.py
src/tb3_rrt_planner/resource/: tb3_rrt_planner
src/tb3_rrt_planner/tb3_rrt_planner/: rrt_planner_node.py
src/tb3_semantics/: package.xml  setup.py
src/tb3_semantics/resource/: tb3_semantics
src/tb3_semantics/tb3_semantics/: semantic_mapper.py
