<?xml version="1.0"?>
<package format="3">
  <name>tb3_exploration</name>
  <version>0.0.1</version>
  <description>SLAM + Nav2 launch and configs for TurtleBot3</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
