<?xml version="1.0"?>
<package format="3">
  <name>tb3_rrt_planner</name>
  <version>0.0.1</version>
  <description>Custom RRT planner publishing nav_msgs/Path</description>

  <maintainer email="kashyapyashashwani@gmail.com">Yashashwani Kashyap</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
